homelab/homeassistant/service-and-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-redirect
  namespace: homelab
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ExternalName
  externalName: homeassistant.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: homelab
spec:
  rules:
    - host: ha.mcmumf.dev # Replace with the hostname or domain you want to use
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant-redirect
                port:
                  number: 80
